Colaboratory를 통해 생성됨

--- a/Greedy/거스름돈.ipynb
+++ b/Greedy/거스름돈.ipynb
@@ -6,7 +6,8 @@
       "name": "거스름돈.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP33HtpplNaivL81G2NU7eW",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOkGtA6dP+Gi0OtMRJf2gGX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,9 +65,9 @@
       "source": [
         "import time \n",
         "\n",
-        "start = time.time()\n",
+        "N = int(input())\n",
         "\n",
-        "N = 1260\n",
+        "start = time.time()   # 아마 입력 다음으로 수행부분에서부터 시간 카운트\n",
         "a1 = N//500\n",
         "b1 = N%500\n",
         "a2 = b1//100\n",
@@ -85,16 +86,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_4sCPTHwAMd",
-        "outputId": "0de116e4-d11f-4f90-ff81-4805a77150f8"
+        "outputId": "70ed1c90-dd16-4401-9191-2fa9f594dd3d"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "1260\n",
             "6\n",
-            "0.0003001689910888672\n"
+            "0.0018253326416015625\n"
           ]
         }
       ]
@@ -111,9 +113,9 @@
     {
       "cell_type": "code",
       "source": [
-        "start = time.time()\n",
+        "n = int(input())\n",
         "\n",
-        "n = 1260\n",
+        "start = time.time()\n",
         "count = 0\n",
         "\n",
         "# 큰 단위의 화폐부터 차례대로 확인\n",
@@ -133,17 +135,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2iNHBpuay1fa",
-        "outputId": "67476ff3-450f-422a-8b83-be34e35379f5"
+        "id": "7203VEV3sNwG",
+        "outputId": "3215f2e4-175c-4355-c5c3-c4a3ba11dadb"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "1260\n",
             "6\n",
-            "0.0009129047393798828\n"
+            "0.001131296157836914\n"
           ]
         }
       ]
