Update and rename [Day_5]1_음료수_얼려_먹기.ipynb to [Day_5]1_음료수_얼려_먹기_.ipynb

--- a/Search/이코테/[Day_5]1_음료수_얼려_먹기_.ipynb
+++ b/Search/이코테/[Day_5]1_음료수_얼려_먹기_.ipynb
@@ -251,7 +251,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1."
+        "# 1. dfs는 스택과 재귀를 이용한다"
       ],
       "metadata": {
         "id": "Q5MkbWYxnbjh"
