Colaboratory를 통해 생성됨

--- a/Search/이코테/[Day_6]4_연구소.ipynb
+++ b/Search/이코테/[Day_6]4_연구소.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[Day 6]4.연구소.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPOhXiSjMIApbIPchx93Rr3",
+      "authorship_tag": "ABX9TyOB9Ha9hAcJju6g9WcC2VRi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,7 +168,7 @@
         "                    virus(i, j)\n",
         "        # 안전 영역 최댓값 계산\n",
         "        result = max(result, get_score())  # 0이상의 수를 고려하기 위해, 앞서 result=0으로 초기화함\n",
-        "        return   # 위의 if문 만족하게 되면 위를 수행한 후, 바로 종료됨.\n",
+        "        return   # 호출 종료 <= 모든 3가지 조합을 보기 위해 이 부분을 넣음. 모두 보았으면 이 함수 종료되는 것.\n",
         "\n",
         "    # 빈 공간에 울타리 설치\n",
         "    # 재귀적으로 진행할 때, count==3 만족하지 않으면 다시 0으로 주고하여 이 조건 만족할 때까지 수행하도록 함. \n",
@@ -195,7 +194,7 @@
         "id": "2iNHBpuay1fa",
         "outputId": "00f32da8-b8a1-405d-92bc-c3b01c1f32a2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,8 +223,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. 울타리 3개 설치하는 모든 경우의 수 모두 계산. 그 조합의 수가 제한 시간보다 작으므로 가능\n",
-        "# 그리고 dfs나 bfs로 해결 가능함"
+        "# 1. 울타리 3개 설치하는 모든 경우의 수 모두 계산. 그 조합의 수(맵 8*8일때 조합의 수 64_C_3)가 제한 시간보다 작으므로 가능함.\n",
+        "# 참고로, 이 문제의 메모리 제한은 512MB이다. KB = 1024^1, MB = 1024^2(=2^20), GB = 1024^3(=2^30)\n",
+        "# 2. 모든 조합을 계산 시에, 파이썬의 조합 라이브러리 또는 DFS/BFS 해결 가능함"
       ],
       "metadata": {
         "id": "Q5MkbWYxnbjh"
