Colaboratory를 통해 생성됨

--- a/Search/이코테/[Day_7]6_괄호_변환.ipynb
+++ b/Search/이코테/[Day_7]6_괄호_변환.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMvgQI3WgVVx12SMOEy49E0",
+      "authorship_tag": "ABX9TyPBOesKPBGjo1ah3+CoMOAv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,7 +201,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. "
+        "# 1. DFS 알고리즘의 핵심이 되는 재귀함수 구현 요구 but, DFS 문제는 아니다."
       ],
       "metadata": {
         "id": "Q5MkbWYxnbjh"
