Colaboratory를 통해 생성됨

--- a/Search/이코테/[Day_7]7_연산자_끼워_넣기.ipynb
+++ b/Search/이코테/[Day_7]7_연산자_끼워_넣기.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJ6i4QCx5VVi9UBBn86SPU",
+      "authorship_tag": "ABX9TyNGjPMr69L6IeJVdKMJQuju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,95 +62,14 @@
     {
       "cell_type": "code",
       "source": [
-        "import time "
+        "import time \n",
+        "from itertools import permutations"
       ],
       "metadata": {
         "id": "-G8s84Tbxgsi"
       },
       "execution_count": 1,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# from itertools import product\n",
-        "n = 4\n",
-        "# print(list(product(['+', '-', '*', '/'], repeat=(n-1))))\n",
-        "a = []\n",
-        "from itertools import permutations\n",
-        "for c in permutations(['*','*','+','-'], n):\n",
-        "    a.append(c)\n",
-        "a"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AIJpi6SkzTIp",
-        "outputId": "51cac638-3b31-430e-cc0a-b7741153c571"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[('*', '*', '+', '-'),\n",
-              " ('*', '*', '-', '+'),\n",
-              " ('*', '+', '*', '-'),\n",
-              " ('*', '+', '-', '*'),\n",
-              " ('*', '-', '*', '+'),\n",
-              " ('*', '-', '+', '*'),\n",
-              " ('*', '*', '+', '-'),\n",
-              " ('*', '*', '-', '+'),\n",
-              " ('*', '+', '*', '-'),\n",
-              " ('*', '+', '-', '*'),\n",
-              " ('*', '-', '*', '+'),\n",
-              " ('*', '-', '+', '*'),\n",
-              " ('+', '*', '*', '-'),\n",
-              " ('+', '*', '-', '*'),\n",
-              " ('+', '*', '*', '-'),\n",
-              " ('+', '*', '-', '*'),\n",
-              " ('+', '-', '*', '*'),\n",
-              " ('+', '-', '*', '*'),\n",
-              " ('-', '*', '*', '+'),\n",
-              " ('-', '*', '+', '*'),\n",
-              " ('-', '*', '*', '+'),\n",
-              " ('-', '*', '+', '*'),\n",
-              " ('-', '+', '*', '*'),\n",
-              " ('-', '+', '*', '*')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "max([1,2,3])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eKf5YvYW5tEl",
-        "outputId": "f7cf0e42-9163-4137-b791-9a9728a54566"
-      },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
     },
     {
       "cell_type": "code",
