Colaboratory를 통해 생성됨

--- a/Search/이코테/[Day_8]10_블록_이동하기.ipynb
+++ b/Search/이코테/[Day_8]10_블록_이동하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO6m9yXT1wOAjOaz4pqrHBq",
+      "authorship_tag": "ABX9TyORPe7d679TS+Els9FGxPSM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -254,7 +254,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1."
+        "# 1. (N,N)까지 도달하는 데 걸리는 최소 시간을 return하는 문제이므로 BFS가 적합하다.(간선 비율 동일 또는 최단거리 문제에 적합 <= 너비 우선 탐색이므로)"
       ],
       "metadata": {
         "id": "Q5MkbWYxnbjh"
