Colaboratory를 통해 생성됨

--- a/DP/이코테/[Day_10]4_효율적인_화폐_구성.ipynb
+++ b/DP/이코테/[Day_10]4_효율적인_화폐_구성.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMo4CPp2+QRKqkunUxyRl0K",
+      "authorship_tag": "ABX9TyO0SdPpAzwqN7BkYNOhptOy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "end = time.time()\n",
         "print(end-start)\n",
         "\n",
-        "# 오답 이유 -> 알고리즘 손도 못 댐. 아직 개념 이해 부족."
+        "# 오답 이유 -> DP table에 어떤 것을 저장할지, 어떤 식으로 이전의 계산 값을 불러와서 사용할지 이해하지 못했음."
       ],
       "metadata": {
         "colab": {
